feat: add routes for UserProfile read and update
